using toList() instead of explicit collector to make sonarlint happy